# samples

./: .gitignore  .pre-commit-config.yaml  README.md  pr_description.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: linter.yaml  linter.yml
a2a/: DEVELOPER_GUIDE.md  README.md  SKILLS.md
a2a/.scripts/: 00-glossary-diagrams.json  08-production-notes-diagrams.json  developer-persona-reviews.md
a2a/business_agent/: README.md
a2a/chat-client/: types.ts
a2a/docs/: 00-glossary.md  01-architecture.md  02-adk-agent.md  03-ucp-integration.md  04-commerce-flows.md  05-frontend.md  06-extending.md  07-testing-guide.md  08-production-notes.md
a2a/self-healing-supply-chain/: README.md  buyer_agent.py  mock_db.py  requirements.txt  start_demo.sh
adapters/shopify/python/: README.md  pyproject.toml
adapters/shopify/python/app/: config.py  main.py  models.py  shopify_client.py  storage.py  ucp_mappers.py
adapters/shopify/python/app/routes/: catalog.py  checkout.py  discovery.py  orders.py  testing.py
adapters/shopify/python/mcp/: README.md  pyproject.toml  ucp_mcp_server.py
docker/: README.md  docker-compose.nodejs.yml  docker-compose.python.yml
docker/nodejs/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docker/python/: .dockerignore  Dockerfile  README.md  docker-compose.yml
python/self-healing-supply-chain/: .gitignore  README.md  buyer_agent.py  demo_logger.py  mock_db.py  (+2 more)
rest/python/client/flower_shop/: pyproject.toml  simple_happy_path_client.py
rest/python/client/flower_shop/sample_output/: happy_path_dialog.md
(+92 files in other folders)
