[project]
name = "ucp-shopify-adapter"
version = "0.1.0"
description = "UCP Shopify adapter (mock) - discovery + shopping endpoints scaffold"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
ucp-shopify-adapter = "app.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routes"]
