[project]
name = "ucp-merchant-sample-client"
version = "0.1.0"
description = "Testing happy path checkout experience in the flower shop."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "UCP Team" }
]
dependencies = [
    "pydantic>=2.12.0",
    "ucp-sdk==0.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
